Thu Oct 23 18:01:46 2013 EDT 2013 (dar)
------------------------------------
 * bb #9222: make fmap_unneed respect nested maps

Wed Oct 23 16:21:46 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: bb#5978 - Allow html detection/normalization for graphic file types.

Thu Oct 17 16:50:00 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: bb#6348 - Add file type recognition for Office Open XML.

Tue Oct 15 16:03:25 2013 EDT 2013 (dar)
------------------------------------
 * libclamav: bb #9154 - ELF handling re-write

Tue Oct 15 16:00:14 2013 EDT 2013 (dar)
------------------------------------
 * libclamav: bb #8696 - Bug reported by NIW Solutions

Mon Oct 14 17:07:40 2013 EDT 2013 (morgan)
------------------------------------
 * bb #8209 - move perror()'s so they will work. Patches supplied by Bill Parker.

Fri Oct 11 16:50:34 2013 EDT 2013 (dar)
------------------------------------
 * bb #9072: clamscan message separator fix

Tue Oct 8 17:17:44 EDT 2013 (morgan)
------------------------------------
 * libclamav: Add support for XZ file type recognition and decompression.

Thu Oct 3 10:49:11 2013 EDT 2013 (dar)
------------------------------------
 * bb #1570: Support ADC compression in DMG

Wed Oct 2 11:22:40 2013 EDT 2013 (dar)
------------------------------------
 * bb #9053: ClamAV 0.98 can't be compiled on FreeBSD 7

Mon Sep 30 11:04:58 2013 EDT 2013 (dar)
------------------------------------
 * bb #9017: tomsfastmath warning with zLinux on s390x

Fri Sep 15 18:15:36 2013 EDT 2013 (morgan)
------------------------------------
 * win32: Import libxml2 2.9.1 components into windows builds for xmlReader support.

Fri Sep 13 12:22:58 2013 EDT 2013 (morgan)
------------------------------------
 * libclamav: Add support for scanning xar/pkg archive files.

Tue Sep 3 18:37:13 2013 EDT 2013 (dar)
------------------------------------
 * V 0.98.0 RC

Thu Aug 15 17:44:49 2013 EDT 2013 (dar)